[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "escrow-accounting"
version = "0.1.0"
description = "RESPA-compliant escrow account analysis for residential mortgages"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
